# Illustrator_MCP

./: .env.example  .gitignore  PROTOCOL.md  README.md  demo_server.py  install-cep.bat  pyproject.toml  test_output.txt
.claude/: settings.json  settings.local.json
cep-extension/: .debug  index.html
cep-extension/CSXS/: manifest.xml
cep-extension/css/: style.css
cep-extension/js/: main.js  (+1 more)
docs/: ARCHITECTURE.md  ROADMAP_v2.4.md
illustrator_mcp/: __init__.py  __version__.py  config.py  errors.py  libraries.py  log_config.py  protocol.py  proxy_client.py  response_models.py  runtime.py  server.py  shared.py  templates.py  utils.py  websocket_bridge.py
living test/: basic_paths.ai  clipping_group.ai  compound_path.ai  id_conflict_copy.ai  living_test.md  nested_groups_transform.ai  placed_image.ai  strokes_effects.ai  text_point_area.ai  ~ai-360951c2-ecb7-408f-938d-68d49318a37f_.tmp  ~ai-3bfcc005-2a97-4fe8-bafc-3b88390e443b_.tmp  ~ai-4ef9aea0-21fe-4f4b-a4ab-28cb5cbe50cb_.tmp  ~ai-acbbf12d-ff62-426f-b0a5-2f5b85e784da_.tmp  ~ai-af117ef1-48c7-428a-91de-23abc38f42b9_.tmp  ~ai-f74442fb-78db-4569-b0ee-afb1337a867e_.tmp
proxy-server/: index.js  package-lock.json  package.json
tests/: README.md  conftest.py  live_test_phase1_3.py  test_context.py  test_documents.py  test_effects.py  test_execute.py  test_injection.py  test_library_resolver.py  test_objects.py  test_pathfinder.py  test_protocol.py  test_proxy_client.py  test_selection.py  test_shapes.py  test_task_protocol_v23.py  test_templates.py  test_websocket_bridge.py
uxp-plugin/: index.js  manifest.json
(+46 files in other folders)
